<resources>
    <string name="app_name">Assignment3Update</string>
    <string name="home">Home</string>
    <string name="no_student_added_yet">No Student added yet.</string>
    <string name="add_student">Add Student</string>
    <string name="class_name">Class Name</string>
    <string name="roll_no">Roll No</string>
    <string name="student_list">Student List</string>
    <string name="add_update_student">Add/Update Student</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_name">Student Name</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">name</string>
    <string name="error_valid_name">Error Please Enter Valid Name</string>
    <string name="error_roll">Error Roll</string>
    <string name="error_valid_class">Error Please Enter Valid Class</string>
    <string name="label_empty_field">Empty Field Please Enter Your Name</string>
    <string name="label_empty_field_class">Empty field Please Enter your Class Name</string>
    <string name="label_empty_field_roll_no">Empty field Please Enter your Roll Number</string>
    <string name="error_wrong_class">Error Wrong Class</string>
    <string name="label_back">Back</string>
    <string name="btn_name_view">View</string>
    <string name="label_update">Update</string>
    <string name="asynctask">Asynctask</string>
    <string name="service">Service</string>
    <string name="intent_service">Intent Service</string>
</resources>
