<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:padding="@dimen/border">

    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/student_border"
        android:padding="@dimen/border"
        android:layout_below="@+id/toolbar">

        <EditText
            android:id="@+id/et_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/border"
            android:hint="@string/student_name"
            android:background="@drawable/student_border"
            />

        <EditText
            android:id="@+id/et_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_student_name"
            android:layout_marginTop="@dimen/border"
            android:padding="@dimen/border"
            android:hint="@string/class_name"
            android:background="@drawable/student_border"
            />
        <EditText
            android:id="@+id/et_roll_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_class"
            android:layout_marginTop="@dimen/border"
            android:padding="@dimen/border"
            android:hint="@string/roll_no"
            android:background="@drawable/student_border"
            />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/border"
            android:padding="@dimen/padding"
            android:layout_below="@+id/et_roll_no"
            android:textColor="@color/colorGreen"
            android:textStyle="bold|normal"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:background="@drawable/assignment_border"
            android:text="@string/submit"
            />




    </RelativeLayout>

</RelativeLayout>